--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <button onclick="levelUp(mojaPostac)">Level up</button>
-<button onclick="addSkill()">Add skill</button>
-<button onclick="addItemBtn(mojaPostac)">Dodać przedmiot</button>
+<button onclick="learnSkill(mojaPostac, prompt('Umiejętniść')); characterDescription(mojaPostac)">Add skill</button>
+<button onclick="addItem(mojaPostac, prompt('Dodaj przedmiot')); characterDescription(mojaPostac)">Dodać przedmiot</button>
 <script src="script.js"></script>
 </body>
 </html>
